Remove height:100% from card-img-top class - was causing squishing issues

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -696,9 +696,9 @@ a.text-center.btn.btn-outline-light.btn__book {
         brightness(100%) contrast(100%);
 }
 
-.card-img-top {
+/* .card-img-top {
     height: 100% !important;
-}
+} */
 
 .p-heading {
     font-weight: 500;
